--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,6 @@
 @import "reset";
+@import "main";
+@import "ember-side-menu";
 
 .app {
   background: blue;
@@ -13,4 +15,46 @@
 .app__m {
   flex-grow: 1;
   background: red;
+}
+
+.content-backdrop {
+  background: none;
+}
+
+.side-menu {
+  display: flex;
+  flex-direction: column;
+}
+
+.side-menu-toggle {
+  color: white;
+  font-size: 1.2rem;
+  display: inline;
+  vertical-align: middle;
+  padding-right: 1rem;
+
+  &--invert {
+    color: black;
+  }
+}
+
+.navbar-header {
+  padding: 0 1rem;
+}
+
+.side-menu-nav {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+
+  li {
+    padding: 1rem;
+  }
+
+  &__divider {
+    flex-grow: 1;
+
+    background: none;
+    border-bottom: 0.1rem solid #e5e5e5;
+  }
 }
