update fonts, colors

--- a/app/styles/_reset.scss
+++ b/app/styles/_reset.scss
@@ -1,6 +1,9 @@
 body {
   margin: 0;
-  background: #241c44;
+  background: $c-white;
+  font-family: 'Roboto', sans-serif;
+  font-family: 'Quicksand', sans-serif;
+
 }
 
 * {
