--- a/app/admin/template.hbs
+++ b/app/admin/template.hbs
@@ -1,3 +1,25 @@
 {{outlet}}
-<h2>Etch</h2>
-<img class="centered" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png" alt="Etchy" />
+
+<div class="hero">
+  <img class="record" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+</div>
+
+<div class="memories">
+
+  <div class="memory">
+    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+  </div>
+
+  <div class="memory">
+    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+  </div>
+
+  <div class="memory">
+    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+  </div>
+
+  <div class="memory">
+    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+  </div>
+
+</div>
