--- a/app/styles/_reset.scss
+++ b/app/styles/_reset.scss
@@ -1,8 +1,8 @@
 body {
   margin: 0;
-  background: $c-white;
-  font-family: 'Roboto', sans-serif;
-  font-family: 'Quicksand', sans-serif;
+  background: $white;
+  // font-family: 'Roboto', sans-serif;
+  // font-family: 'Quicksand', sans-serif;
 }
 
 * {
