more bulma styling for buttons and twitter link

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,13 +1,31 @@
-<header class="nav">
-  <div class="nav-header">
-    {{#side-menu-toggle}}
-    <span class="fa fa-bars"></span>
-    {{/side-menu-toggle}}
-    <h1>
+<nav class="nav">
+  <div class="nav-left">
+    <div class="nav-item">
+      {{#side-menu-toggle}}
+      <span class="fa fa-bars"></span>
+      {{/side-menu-toggle}}
+    </div>
+
+    <h1 class="nav-item is-brand">
       Etch
     </h1>
   </div>
-</header>
+
+  <div class="nav-right nav-menu">
+
+    <span class="nav-item">
+      <a class="button is-success">Login</a>
+      <a class="button is-success">Signup</a>
+      <a class="button" >
+        <span class="icon">
+          <i class="fa fa-twitter"></i>
+        </span>
+        <span>Tweet</span>
+      </a>
+    </span>
+  </div>
+
+</nav>
 
 {{#side-menu width="40%"}}
   <ul class="side-menu-nav">
