--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -1,11 +1,7 @@
 .nav {
-  color: $warning;
-  font-size: 1rem;
-  padding: 0 1rem;
-
   h1 {
-    display: inline-block;
-    margin: 0;
+    color: $warning;
+    font-size: 30px;
   }
 }
 
