update code for main page

--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,5 +1,25 @@
-<div class="container">
-  <h2>
-    Main page for guests and to explore
-  </h2>
+{{outlet}}
+
+<div class="hero">
+  <img class="record" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+</div>
+
+<div class="memories">
+
+  <div class="memory">
+    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+  </div>
+
+  <div class="memory">
+    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+  </div>
+
+  <div class="memory">
+    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+  </div>
+
+  <div class="memory">
+    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+  </div>
+
 </div>
