--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -1,25 +1,30 @@
 {{outlet}}
 
 <div class="box">
-  <label class="label">Username</label>
-  <p class="control has-icon has-icon-right">
-    <input class="input is-success" type="text" placeholder="Username">
-  </p>
+  <div class="wrap">
+    <label class="label"></label>
+    <p class="control has-icon">
+      <input class="input is-success" type="text" placeholder="Username">
+      <i class="fa fa-user"></i>
+    </p>
 
-  <label class="label">Password</label>
-  <p class="control">
-    <input class="input is-success" type="text" placeholder="Password">
-  </p>
+    <label class="label"></label>
+    <p class="control has-icon">
+      <input class="input is-success" type="text" placeholder="Password">
+      <i class="fa fa-key"></i>
+    </p>
 
-  <p class="control">
-    <label class="checkbox">
-      <input type="checkbox">
-      Remember me
-    </label>
-  </p>
+    <p class="control">
+      <label class="checkbox">
+        <input type="checkbox">
+        Remember me
+      </label>
+    </p>
 
-  <p class="control">
-    <button class="button is-warning">Submit</button>
-    <button class="button is-warning">Cancel</button>
-  </p>
+    <p class="control">
+      <button class="button is-warning">Submit</button>
+      <button class="button is-warning">Cancel</button>
+    </p>
+  </div>
+
 </div>
