--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -28,7 +28,7 @@
 </nav>
 
 {{#side-menu width="40%"}}
-  <ul class="side-menu-nav">
+  {{!-- <ul class="side-menu-nav">
     <li>
       {{#side-menu-link-to "index"}}
         My Memories
@@ -50,7 +50,36 @@
         Logout
       {{/side-menu-link-to}}
     </li>
+  </ul> --}}
+
+  <aside class="menu">
+  <p class="menu-label">
+    Etch
+  </p>
+  <ul class="menu-list">
+    <li>
+      {{#side-menu-link-to "index"}}
+      My Memories
+      {{/side-menu-link-to}}
+    </li>
+    <li>
+      {{#side-menu-link-to "index"}}
+      My Friends
+      {{/side-menu-link-to}}
+    </li>
+    <li>
+      {{#side-menu-link-to "index"}}
+      Etch A Song
+      {{/side-menu-link-to}}
+    </li>
+    <li class="side-menu-nav__divider"></li>
+    <li class="logout">
+      {{#side-menu-link-to "index"}}
+        Logout
+      {{/side-menu-link-to}}
+    </li>
   </ul>
+</aside>
 {{/side-menu}}
 {{content-backdrop}}
 <div class="page-content">
