--- a/app/signup/template.hbs
+++ b/app/signup/template.hbs
@@ -5,7 +5,7 @@
 </p>
 <p class="control has-icon">
   <input class="input" type="email" placeholder="Username">
-  <i class="fa fa-at"></i>
+  <i class="fa fa-user"></i>
 </p>
 <p class="control has-icon">
   <input class="input" type="email" placeholder="Email">
@@ -22,6 +22,6 @@
 
 
 <p class="control">
-  <button class="button is-primary">Submit</button>
-  <button class="button is-link">Cancel</button>
+  <button class="button is-warning">Submit</button>
+  <button class="button is-warning">Cancel</button>
 </p>
