fixed gradient attempt

--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -11,7 +11,7 @@
     <label class="label"></label>
     <p class="control has-icon">
       <input class="input is-success" type="text" placeholder="Password">
-      <i class="fa fa-key"></i>
+      <i class="fa fa-lock"></i>
     </p>
 
     <p class="control">
