--- a/app/styles/_profile.scss
+++ b/app/styles/_profile.scss
@@ -19,7 +19,7 @@
   border-radius: 50%;
   max-width: 30rem;
   overflow: hidden;
-  box-shadow: 0.2rem 0.2rem 0.4rem rgba($black, 0.4);
+  box-shadow: 2px 2px 2px #888888;
 
   transition: transform 1s;
 
