--- a/app/styles/_main.scss
+++ b/app/styles/_main.scss
@@ -1,3 +1,10 @@
+body {
+  margin: 0;
+  // background: radial-gradient($secondary 50%, $white 50%);
+  // font-family: 'Roboto', sans-serif;
+  // font-family: 'Quicksand', sans-serif;
+}
+
 .record {
   display: block;
   margin: 0 auto;
