--- a/app/styles/_reset.scss
+++ b/app/styles/_reset.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background: radial-gradient($secondary 50%, $white 50%);
   // font-family: 'Roboto', sans-serif;
   // font-family: 'Quicksand', sans-serif;
 }
