saving before login stuff

--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -2,6 +2,7 @@
 
 <div class="box">
   <div class="wrap">
+
     <label class="label"></label>
     <p class="control has-icon">
       <input class="input is-success" type="text" placeholder="Username">
@@ -17,7 +18,7 @@
     <p class="control">
       <label class="checkbox">
         <input type="checkbox">
-        Remember me
+        Remember me {{emoji-character "sunglasses"}}
       </label>
     </p>
 
@@ -25,6 +26,6 @@
       <button class="button is-warning">Submit</button>
       <button class="button is-warning">Cancel</button>
     </p>
-  </div>
 
+  </div>
 </div>
