Allow User Login

--- a/app/signup/template.hbs
+++ b/app/signup/template.hbs
@@ -1,31 +1,31 @@
 {{outlet}}
-<div class="box">
-  <div class="wrap">
+<div class="box-signup">
+  {{#simple-form onsubmit=(action "saveUser") class="wrap-signup" as |formValues|}}
     <p class="control has-icon">
-      <input class="input" type="email" placeholder="Name">
+      {{input class="input" type="name" placeholder="Name" value=formValues.name}}
       <i class="fa fa-pencil"></i>
     </p>
     <p class="control has-icon">
-      <input class="input" type="email" placeholder="Username">
+      {{input class="input" type="username" placeholder="Username" value=formValues.username}}
       <i class="fa fa-user"></i>
     </p>
     <p class="control has-icon">
-      <input class="input" type="email" placeholder="Email">
+      {{input class="input" type="email" placeholder="Email" value=formValues.email}}
       <i class="fa fa-envelope"></i>
     </p>
     <p class="control has-icon">
-      <input class="input" type="password" placeholder="Create Password">
+      {{input class="input" type="password" placeholder="Create Password" value=formValues.password}}
       <i class="fa fa-lock"></i>
     </p>
     <p class="control has-icon">
-      <input class="input" type="password" placeholder="Confirm Password">
+      {{input class="input" type="password" placeholder="Confirm Password" value=formValues.passwordConfirm}}
       <i class="fa fa-lock"></i>
     </p>
 
 
     <p class="control">
       <button class="button is-warning">Submit</button>
-      <button class="button is-warning">Cancel</button>
+      <button type="button" class="button is-warning">Cancel</button>
     </p>
-  </div>
+  {{/simple-form}}
 </div>
