etch template page and profile template page complete

--- a/app/profile/template.hbs
+++ b/app/profile/template.hbs
@@ -1,11 +1,24 @@
 {{outlet}}
 
-<div class="profile">
-  <div class="record">
-    <img class="record__pic" src="http://s1.ticketm.net/tm/en-us/dam/a/464/a0f4b7ae-b7c5-458d-8336-396ce71ae464_203561_CUSTOM.jpg"/>
-    {{!-- <img class="image" src="your-image.png"> --}}
+<div class="profile-container">
+
+  <div class="profile">
+    <div class="record">
+      <img class="record__pic" src="http://s1.ticketm.net/tm/en-us/dam/a/464/a0f4b7ae-b7c5-458d-8336-396ce71ae464_203561_CUSTOM.jpg"/>
+      {{!-- <img class="image" src="your-image.png"> --}}
+    </div>
   </div>
+
+  <div class="info content">
+    <h1>@kittybot</h1>
+    <h2>Nashville, TN.</h2>
+    <h2>http://kittybotblog.io</h2>
+  </div>
+
 </div>
+
+
+
 
 <div class="memories">
 
