--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -48,6 +48,10 @@
   box-shadow: 2px 2px 2px #888888;
 }
 
+.ember-view {
+  font-weight: bold;
+}
+
 .ember-view.side-menu-toggle {
   // width: 20%;
 }
