--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -2,5 +2,10 @@
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 4.3rem;
   background-color: $secondary;
 }
+
+  .content.has-text-centered {
+    padding-top: 1rem;
+  }
