Style Sidebar font

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -27,8 +27,9 @@
 
 </nav>
 
-{{#side-menu width="40%"}}
+{{#side-menu width="20%"}}
   <ul class="side-menu-nav">
+    <p class="side--menu-title">Etch</p>
     <li>
       {{#side-menu-link-to "index"}}
         My Memories
