update image for login

--- a/app/styles/_login.scss
+++ b/app/styles/_login.scss
@@ -1,10 +1,10 @@
 .box {
+  background: url(http://67.media.tumblr.com/676517ff93cbdafc35497eeceb2b96da/tumblr_ncghjfDPSW1tmjqrdo1_500.jpg);
   margin: 0 auto;
-  background: url(http://65.media.tumblr.com/tumblr_lno4gxQeDI1qfh7bqo1_500.jpg);
   height: 338px;
   width: 500px;
   margin-top: 65px;
-  box-shadow: 2px 2px 2px #888888
+  box-shadow: 2px 2px 2px #888888;
 }
 
 .checkbox {
