--- a/app/styles/_signup.scss
+++ b/app/styles/_signup.scss
@@ -1,18 +1,14 @@
 .box-signup {
+  background: url(http://67.media.tumblr.com/676517ff93cbdafc35497eeceb2b96da/tumblr_ncghjfDPSW1tmjqrdo1_500.jpg);
   margin: 0 auto;
-  padding: 1rem;
-  max-width: 100%;
-  height: auto;
-  background-image: url(http://67.media.tumblr.com/676517ff93cbdafc35497eeceb2b96da/tumblr_ncghjfDPSW1tmjqrdo1_500.jpg);
-  background-repeat: no-repeat;
-  background-size: 100%;
-
-  // margin-top: 65px;
-  box-shadow: 2px 2px 2px #888888
+  height: 338px;
+  width: 500px;
+  margin-top: 65px;
+  box-shadow: 2px 2px 2px #888888;
 }
 
 .wrap-signup {
-    margin: 150px;
+    margin-top: 150px;
 
 }
 
