--- a/app/memories/template.hbs
+++ b/app/memories/template.hbs
@@ -1,3 +1,31 @@
 {{outlet}}
 
-<h1>A super cool timeline of your Etch memories goes here</h1>
+<div class="card">
+
+  <div class="card-image">
+    <figure class="image is-4by3">
+      <img src="http://cdn-s3.allmusic.com/release-covers/500/0000/332/0000332502.jpg" alt="">
+    </figure>
+  </div>
+
+  <div class="card-content">
+
+    <div class="media">
+      <large>1 Jan 2016</large>
+      <div class="media-content">
+
+        <p class="title is-5">Toto</p>
+        <p class="subtitle is-6">Africa</p>
+
+        <div class="content">
+          Greatest song ever? I think so!
+          <br>
+        </div>
+      </div>
+
+    </div>
+
+
+  </div>
+
+</div>
