styling updates for sidebar and memory timeline

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -32,6 +32,16 @@
     <p class="side--menu-title">Etch</p>
     <li>
       {{#side-menu-link-to "index"}}
+        Etch A Memory!
+      {{/side-menu-link-to}}
+    </li>
+    <li>
+      {{#side-menu-link-to "index"}}
+        My Profile
+      {{/side-menu-link-to}}
+    </li>
+    <li>
+      {{#side-menu-link-to "index"}}
         My Memories
       {{/side-menu-link-to}}
     </li>
@@ -42,7 +52,12 @@
     </li>
     <li>
       {{#side-menu-link-to "index"}}
-        Etch A Song
+        Most Popular
+      {{/side-menu-link-to}}
+    </li>
+    <li>
+      {{#side-menu-link-to "index"}}
+        Memory Map
       {{/side-menu-link-to}}
     </li>
     <li class="side-menu-nav__divider"></li>
