--- a/app/memories/template.hbs
+++ b/app/memories/template.hbs
@@ -1,31 +1,36 @@
 {{outlet}}
 
-<div class="card">
+<article class="media">
 
-  <div class="card-image">
-    <figure class="image is-4by3">
-      <img src="http://cdn-s3.allmusic.com/release-covers/500/0000/332/0000332502.jpg" alt="">
-    </figure>
+  <figure class="media-left">
+      <img class="image" src="http://cdn-s3.allmusic.com/release-covers/500/0000/332/0000332502.jpg">
+  </figure>
+
+  <div class="media-content">
+    <div class="content">
+      <p>
+        <strong>Toto</strong> <large>Africa</large> <strong>1 Jan 2016</strong>
+        <br>
+        {{emoji-character "grinning"}} Greatest song ever? I think so!
+      </p>
+    </div>
   </div>
+</article>
 
-  <div class="card-content">
+<article class="media">
 
-    <div class="media">
-      <large>1 Jan 2016</large>
-      <div class="media-content">
+  <figure class="media-left">
+      <img class="image" src="http://static6.comicvine.com/uploads/scale_small/2/26751/635869-164935__new_kids_l.jpg">
+  </figure>
 
-        <p class="title is-5">Toto</p>
-        <p class="subtitle is-6">Africa</p>
-
-        <div class="content">
-          Greatest song ever? I think so!
-          <br>
-        </div>
-      </div>
-
+  <div class="media-content">
+    <div class="content">
+      <p>
+        <strong>New Kids On The Block</strong> <large>Right Stuff</large> <strong>10 Jan 2016</strong>
+        <br>
+        {{emoji-character "heart_eyes"}} Awww little Joey!
+      </p>
     </div>
 
-
   </div>
-
-</div>
+</article>
