--- a/app/styles/_memories.scss
+++ b/app/styles/_memories.scss
@@ -1,3 +1,8 @@
-.content {
-
+.image {
+  // position: relative;
+  // display: block;
+  max-width: 8rem;
+  // overflow: hidden;
+  border-radius: 50%;
+  box-shadow: 2px 2px 2px #888888;
 }
