--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -48,13 +48,13 @@
   box-shadow: 2px 2px 2px #888888;
 }
 
-.ember-view.active {
+.side-menu {
   font-weight: bold;
   font-size: 1.5rem;
 }
 
 .ember-view.side-menu-toggle {
-  // width: 20%;
+  font-weight: normal;
 }
 
 .side--menu-title {
