--- a/app/styles/_signup.scss
+++ b/app/styles/_signup.scss
@@ -1,21 +1,20 @@
 .box-signup {
   background: url(http://67.media.tumblr.com/676517ff93cbdafc35497eeceb2b96da/tumblr_ncghjfDPSW1tmjqrdo1_500.jpg);
-  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0 auto;
   height: 338px;
   width: 500px;
   margin-top: 65px;
+
+
   box-shadow: 2px 2px 2px #888888;
 
 }
 
 .wrap-signup {
-    margin-top: 150px;
+  font-weight: normal;
 
-}
-
-
-
-.input {
 
 }
