linking all the things

--- a/app/etch/template.hbs
+++ b/app/etch/template.hbs
@@ -2,7 +2,9 @@
 <div class="etch-container">
 
   <div class="hero">
+    {{#link-to "etch.create"}}
     <img class="record" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+    {{/link-to}}
   </div>
 
   <div class="etch-info content">
