--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -15,8 +15,8 @@
   <div class="nav-right nav-menu">
 
     <span class="nav-item">
-      {{#link-to "login"}}
-      <button class="button is-success">Login</button>
+      {{#link-to "login" class="button is-success"}}
+      Login
       {{/link-to}}
 
       {{#link-to "signup"}}
