--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -53,10 +53,10 @@
   box-shadow: 2px 2px 2px #888888;
 }
 
-.ember-view {
-  font-weight: bold;
-  font-size: 1.5rem;
-}
+// .ember-view {
+//   font-weight: bold;
+//   font-size: 1.5rem;
+// }
 
 .ember-view.side-menu-toggle {
   // width: 20%;
