Update Controller for Signup

--- a/app/signup/template.hbs
+++ b/app/signup/template.hbs
@@ -18,7 +18,7 @@
       <i class="fa fa-lock"></i>
     </p>
     <p class="control has-icon">
-      {{input class="input" type="password" placeholder="Confirm Password" value=formValues.passwordConfirm}}
+      {{input class="input" type="password" placeholder="Confirm Password" value=formValues.passwordConfirmation}}
       <i class="fa fa-lock"></i>
     </p>
 
