--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -1,17 +1,19 @@
 {{outlet}}
 
 <div class="box">
-  <div class="wrap">
+  {{#simple-form class="wrap" onsubmit=(action "login") as | formValues | }}
 
     <label class="label"></label>
     <p class="control has-icon">
-      <input class="input is-success" type="text" placeholder="Username">
+      {{input value=formValues.email class="input is-success" type="text" placeholder="Email"}}
+
       <i class="fa fa-user"></i>
     </p>
 
     <label class="label"></label>
     <p class="control has-icon">
-      <input class="input is-success" type="text" placeholder="Password">
+      {{input type="password" class="input is-success" value=formValues.password placeholder="Password"}}
+
       <i class="fa fa-lock"></i>
     </p>
 
@@ -27,5 +29,5 @@
       <button class="button is-warning">Cancel</button>
     </p>
 
-  </div>
+  {{/simple-form}}
 </div>
