--- a/app/styles/_memories.scss
+++ b/app/styles/_memories.scss
@@ -6,3 +6,8 @@
   border-radius: 50%;
   box-shadow: 2px 2px 2px #888888;
 }
+
+// .media-opposite {
+//   flex-direction: row-reverse;
+//   text-align: right;
+// }
