setup spotify api and search

--- a/app/etch/template.hbs
+++ b/app/etch/template.hbs
@@ -13,4 +13,8 @@
     <h4>Step 3: Save your memory! {{emoji-character "heart"}}</h4>
   </div>
 
+  {{#each model as |track|}}
+    {{track.name}}
+  {{/each}}
+
 </div>
