--- a/app/admin/friends/index/template.hbs
+++ b/app/admin/friends/index/template.hbs
@@ -2,28 +2,13 @@
 
 <div class="memories">
 
+  {{#each model as |friend|}}
   <div class="memory">
     <div class="record record--with-center">
-      <img class="record__pic" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+      {{gravatar-image email=friend.email class="record__pic"}}
     </div>
+    <p>{{friend.email}}</p>
   </div>
-
-  <div class="memory">
-    <div class="record record--with-center">
-      <img class="record__pic" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
-    </div>
-  </div>
-
-  <div class="memory">
-    <div class="record record--with-center">
-      <img class="record__pic" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
-    </div>
-  </div>
-
-  <div class="memory">
-    <div class="record record--with-center">
-      <img class="record__pic" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
-    </div>
-  </div>
+  {{/each}}
 
 </div>
