--- a/app/styles/_profile.scss
+++ b/app/styles/_profile.scss
@@ -52,7 +52,8 @@
   }
 
   &__pic {
-    border-radius: 50%;margin: 0;
+    border-radius: 50%;
+    margin: 0;
     position: absolute;
     top: 0;
     height: 100%;
