--- a/app/etch/song/template.hbs
+++ b/app/etch/song/template.hbs
@@ -4,17 +4,29 @@
   <div class="modal-background"></div>
   <div class="modal-card">
     <header class="modal-card-head">
-      <p class="modal-card-title">Pick a song, any song...</p>
+      <p class="modal-card-title">{{emoji-character "notes"}}Pick a song, any song...{{emoji-character "notes"}}</p>
 
     </header>
     <section class="modal-card-body">
 
       <div class="container">
-          <h1>Search for an Artist</h1>
-          <form id="search-form">
-              <input type="text" id="query" value="" class="form-control" />
-              <input type="submit" id="search" class="btn btn-primary" value="Search" />
-          </form>
+          <h1>Search artist or song</h1>
+
+          {{!-- <div class="control">
+            <div class="select is-fullwidth"> --}}
+              {{#power-select
+                search=(action "searchSong")
+                selected=selected
+                onchange=(action (mut selected))
+                as |track|}}
+                {{#each track.artists as |artist|}}
+                  {{artist.name}}
+                {{/each}} -
+                {{track.name}}
+              {{/power-select}}
+            {{!-- </div>
+          </div> --}}
+
           <div id="results"></div>
       </div>
           {{#each albums.items}}
@@ -23,8 +35,15 @@
 
     </section>
     <footer class="modal-card-foot">
-      <a class="button is-primary">Save</a>
-      <a class="button">Cancel</a>
+
+      {{!-- {{#link-to "etch/emo"}} --}}
+      <a class="button is-warning">Next</a>
+      {{!-- {{/link-to}} --}}
+
+      {{#link-to "etch"}}
+      <a class="button is-warning">Cancel</a>
+      {{/link-to}}
+
     </footer>
   </div>
 </div>
