Add usernames in friends feature

--- a/app/admin/friends/index/template.hbs
+++ b/app/admin/friends/index/template.hbs
@@ -7,8 +7,7 @@
     <div class="record record--with-center">
       {{gravatar-image email=friend.email class="record__pic"}}
     </div>
-    <p>{{friend.email}}</p>
-  </div>
+    <p class="has-text-centered subtitle">{{friend.username}}</p> </div>
   {{/each}}
 
 </div>
