--- a/app/etch/song/template.hbs
+++ b/app/etch/song/template.hbs
@@ -5,45 +5,60 @@
   <div class="modal-card">
     <header class="modal-card-head">
       <p class="modal-card-title">{{emoji-character "notes"}}Pick a song, any song...{{emoji-character "notes"}}</p>
-
     </header>
+
     <section class="modal-card-body">
 
-      <div class="container">
-          <h1>Search artist or song</h1>
+    <div class="container">
+        <h1>1. Search artist or song</h1>
 
-          {{!-- <div class="control">
-            <div class="select is-fullwidth"> --}}
-              {{#power-select
-                search=(action "searchSong")
-                selected=selected
-                onchange=(action (mut selected))
-                as |track|}}
-                {{#each track.artists as |artist|}}
-                  {{artist.name}}
-                {{/each}} -
-                {{track.name}}
-              {{/power-select}}
-            {{!-- </div>
-          </div> --}}
+        {{!-- <div class="control">
+          <div class="select is-fullwidth"> --}}
+            {{#power-select
+              search=(action "searchSong")
+              selected=selected
+              onchange=(action (mut selected))
+              as |track|}}
+              {{#each track.artists as |artist|}}
+                {{artist.name}}
+              {{/each}} -
+              {{track.name}}
+            {{/power-select}}
+          {{!-- </div>
+        </div> --}}
 
-          <div id="results"></div>
-      </div>
-          {{#each albums.items}}
-          <div style="background-image:url({{images.0.url}})" data-album-id="{{id}}" class="cover"></div>
-          {{/each}}
+        <div id="results"></div>
+    </div>
 
-    </section>
-    <footer class="modal-card-foot">
+      {{#each albums.items}}
+      <div style="background-image:url({{images.0.url}})" data-album-id="{{id}}" class="cover"></div>
+      {{/each}}
 
-      {{!-- {{#link-to "etch/emo"}} --}}
-      <a class="button is-warning">Next</a>
-      {{!-- {{/link-to}} --}}
+
+          <label class="label">2. Pick an emoji</label>
+          <p class="control">
+
+            {{#each emotions as |emotion|}}
+              <button>{{emoji-character emotion class="icon"}}</button>
+            {{/each}}
+
+          </p>
+          <label class="label">3. Write it out!</label>
+          <p class="control">
+            <textarea class="textarea" placeholder="Feelings..."></textarea>
+          </p>
+
+        <footer class="modal-card-foot">
+          <p class="control">
+            <button class="button is-warning">Submit</button>
+            <button class="button is-warning">Cancel</button>
+          </p>
+        </footer>
 
       {{#link-to "etch"}}
-      <a class="button is-warning">Cancel</a>
+      <button class="modal-close"></button>
       {{/link-to}}
 
-    </footer>
+    </section>
   </div>
 </div>
