add image upload

--- a/app/admin/profile/template.hbs
+++ b/app/admin/profile/template.hbs
@@ -8,7 +8,7 @@
       {{!-- <img class="image" src="your-image.png"> --}}
     </div>
   </div>
-
+  <button type="button" class="form__btn"{{action "choosePic" currentUser.user}}>Upload Pic</button>
   <div class="info content">
     <h1>@kittybot</h1>
     <h2>Nashville, TN.</h2>
