--- a/app/admin/friends/memories/template.hbs
+++ b/app/admin/friends/memories/template.hbs
@@ -1,36 +1,21 @@
 {{outlet}}
 
-<article class="media">
+{{#each model as |memory|}}
+  <article class="media">
+    <figure class="media-left">
+        <img class="image" src="http://cdn-s3.allmusic.com/release-covers/500/0000/332/0000332502.jpg">
+    </figure>
 
-  <figure class="media-left">
-      <img class="image" src="http://cdn-s3.allmusic.com/release-covers/500/0000/332/0000332502.jpg">
-  </figure>
-
-  <div class="media-content">
-    <div class="content">
-      <p>
-        <strong>Toto</strong> <large>Africa</large> <strong>1 Jan 2016</strong>
-        <br>
-        {{emoji-character "grinning"}} Greatest song ever? I think so!
-      </p>
+    <div class="media-content">
+      <div class="content">
+        <p>
+          <strong>{{memory.track.artists.[0].name}}</strong>
+          <large>{{memory.track.name}}</large>
+          <strong>{{memory.date}}</strong>
+          <br>
+          {{emoji-character memory.emoji}} {{memory.text}}
+        </p>
+      </div>
     </div>
-  </div>
-</article>
-
-<article class="media">
-
-  <figure class="media-left">
-      <img class="image" src="http://static6.comicvine.com/uploads/scale_small/2/26751/635869-164935__new_kids_l.jpg">
-  </figure>
-
-  <div class="media-content">
-    <div class="content">
-      <p>
-        <strong>New Kids On The Block</strong> <large>Right Stuff</large> <strong>10 Jan 2016</strong>
-        <br>
-        {{emoji-character "heart_eyes"}} Awww little Joey!
-      </p>
-    </div>
-
-  </div>
-</article>
+  </article>
+{{/each}}
