--- a/app/styles/_memories.scss
+++ b/app/styles/_memories.scss
@@ -7,7 +7,16 @@
   box-shadow: 2px 2px 2px #888888;
 }
 
-// .media-opposite {
-//   flex-direction: row-reverse;
-//   text-align: right;
+// .media {
+//   align-items: center;
+//   flex-direction: column-reverse;
+//   // text-align: right;
+// }
+//
+// .media-content {
+//   align-items: stretch;
+// }
+//
+// .etch-memories {
+//   flex-direction: column-reverse;
 // }
