--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 4.3rem;
   background-color: $secondary;
-  z-index: 1rem;
+  z-index: 1;
 }
 
   .content.has-text-centered {
