update date in memories

--- a/app/admin/friends/memories/template.hbs
+++ b/app/admin/friends/memories/template.hbs
@@ -1,5 +1,5 @@
 {{outlet}}
 
-{{#each model.memories as |memory|}}
+{{#each (sort-by "createdAt:desc" model.memories) as |memory|}}
   {{memory-item memory=memory}}
 {{/each}}
