--- a/app/admin/friends/memories/template.hbs
+++ b/app/admin/friends/memories/template.hbs
@@ -1,5 +1,7 @@
 {{outlet}}
 
-{{#each (sort-by "createdAt:desc" model.memories) as |memory|}}
-  {{memory-item memory=memory}}
-{{/each}}
+<ul class="etch-memories">
+  {{#each (sort-by "createdAt:desc" model.memories) as |memory|}}
+    {{memory-item memory=memory}}
+  {{/each}}
+</ul>
