--- a/app/components/memory-item/template.hbs
+++ b/app/components/memory-item/template.hbs
@@ -1,22 +1,21 @@
-<article class="media">
-  <figure class="media-left">
-      <img class="image" src="{{album.url}}">
-  </figure>
+<li class="etch-memories__item">
 
-  <div class="media-content">
-    <div class="content">
-      <p class="etch-memories">
-        <strong>
-          {{#each track.artists as |artist|}}
-            {{artist.name}}
-          {{/each}}
-        </strong>
+  <img class="record" src="{{album.url}}"/>
 
-        <large>{{track.name}}</large>
-        <strong>{{moment-from-now memory.createdAt "YYYY-MM-DD HH:mm:ss"}}</strong>
-        <br>
-        {{emoji-character memory.emoji}} {{memory.text}}
-      </p>
+
+    <div class="etch-memories__item-content">
+          <div class="content">
+            <strong class="">
+              {{#each track.artists as |artist|}}
+                {{artist.name}}
+              {{/each}}
+            </strong>
+
+            <large>{{track.name}}</large>
+            <strong>{{moment-from-now memory.createdAt "YYYY-MM-DD HH:mm:ss"}}</strong>
+            <br>
+            {{emoji-character memory.emoji}} {{memory.text}}
+          </div>
     </div>
-  </div>
-</article>
+
+</li>
