--- a/app/styles/_memories.scss
+++ b/app/styles/_memories.scss
@@ -1,22 +1,43 @@
-.image {
-  // position: relative;
-  // display: block;
+.record {
+  position: relative;
+  display: block;
   max-width: 8rem;
-  // overflow: hidden;
+  overflow: hidden;
   border-radius: 50%;
   box-shadow: 2px 2px 2px #888888;
 }
 
-// .media {
-//   align-items: center;
-//   flex-direction: column-reverse;
-//   // text-align: right;
-// }
-//
-// .media-content {
-//   align-items: stretch;
-// }
-//
-// .etch-memories {
-//   flex-direction: column-reverse;
-// }
+.etch-memories {
+  padding: 2rem 0;
+  width: 0.5rem;
+  background: $gray;
+  height: 40rem;
+  margin: auto;
+
+  &__item {
+    position: relative;
+    transform: translateX(-50%);
+    width: 18rem;
+  }
+
+  > * + * {
+    margin-top: 2rem;
+  }
+
+  &__pic {
+    position: relative;
+
+
+  }
+
+  &__item-content {
+    // position: absolute;
+
+    top: 0;
+    left: 100%;
+    margin-left: 1rem;
+  }
+
+  // p:nth-of-type(even) {
+  // }
+}
