--- a/app/admin/friends/profile/template.hbs
+++ b/app/admin/friends/profile/template.hbs
@@ -3,44 +3,22 @@
 <div class="profile-container">
 
   <div class="profile">
-    <div class="record">
-      <img class="record__pic" src="http://s1.ticketm.net/tm/en-us/dam/a/464/a0f4b7ae-b7c5-458d-8336-396ce71ae464_203561_CUSTOM.jpg"/>
-      {{!-- <img class="image" src="your-image.png"> --}}
-    </div>
+    {{profile-pic user=model}}
   </div>
 
   <div class="info content">
-    <h1>@kittybot</h1>
-    <h2>Nashville, TN.</h2>
-    <h2>http://kittybotblog.io</h2>
+    <h1>@{{model.username}}</h1>{{!-- <h2>Nashville, TN.</h2>
+    <h2>http://kittybotblog.io</h2> --}}
   </div>
 
 </div>
 
 <div class="memories">
-
-  <div class="memory">
-    <div class="record record--with-center">
-      <img class="record__pic" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+  {{#each (take 4 model.memories) as |memory|}}
+    <div class="memory">
+      <div class="record record--with-center">
+        <img class="record__pic" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png" />
+      </div>
     </div>
-  </div>
-
-  <div class="memory">
-    <div class="record record--with-center">
-      <img class="record__pic" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
-    </div>
-  </div>
-
-  <div class="memory">
-    <div class="record record--with-center">
-      <img class="record__pic" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
-    </div>
-  </div>
-
-  <div class="memory">
-    <div class="record record--with-center">
-      <img class="record__pic" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
-    </div>
-  </div>
-
+  {{/each}}
 </div>
