profile picture upload working

--- a/app/etch/song/template.hbs
+++ b/app/etch/song/template.hbs
@@ -4,60 +4,52 @@
   <div class="modal-background"></div>
   <div class="modal-card">
     <header class="modal-card-head">
-      <p class="modal-card-title">{{emoji-character "notes"}}Pick a song, any song...{{emoji-character "notes"}}</p>
+      <p class="modal-card-title">{{emoji-character "notes"}}Let's etch a memory!{{emoji-character "notes"}}</p>
     </header>
 
     <section class="modal-card-body">
 
-    <div class="container">
-        <h1>1. Search artist or song</h1>
+      {{#simple-form class="container" onsubmit=(action "saveMemory" spotifyTrack) as |formValues|}}
+        <h1>Search artist or song</h1>
 
-        {{!-- <div class="control">
-          <div class="select is-fullwidth"> --}}
-            {{#power-select
-              search=(action "searchSong")
-              selected=selected
-              onchange=(action (mut selected))
-              as |track|}}
-              {{#each track.artists as |artist|}}
-                {{artist.name}}
-              {{/each}} -
-              {{track.name}}
-            {{/power-select}}
-          {{!-- </div>
-        </div> --}}
+        {{#power-select
+          search=(action "searchSong")
+          selected=spotifyTrack
+          onchange=(action (mut spotifyTrack))
+          as |track|}}
+          {{#each track.artists as |artist|}}
+            {{artist.name}}
+          {{/each}} -
+          {{track.name}}
+        {{/power-select}}
 
         <div id="results"></div>
-    </div>
 
-      {{#each albums.items}}
-      <div style="background-image:url({{images.0.url}})" data-album-id="{{id}}" class="cover"></div>
-      {{/each}}
-
-
-          <label class="label">2. Pick an emoji</label>
+          <label class="label">Pick an emoji</label>
           <p class="control">
 
             {{#each emotions as |emotion|}}
-              <button>{{emoji-character emotion class="icon"}}</button>
+              <button {{action (action (mut formValues.emoji) emotion)}}>{{emoji-character emotion class="icon"}}</button>
             {{/each}}
 
           </p>
-          <label class="label">3. Write it out!</label>
+          <label class="label">Write it out!</label>
           <p class="control">
-            <textarea class="textarea" placeholder="Feelings..."></textarea>
+            {{textarea class="textarea" placeholder="Feelings..." value=formValues.text}}
           </p>
 
         <footer class="modal-card-foot">
           <p class="control">
+
             <button class="button is-warning">Submit</button>
             <button class="button is-warning">Cancel</button>
           </p>
         </footer>
 
-      {{#link-to "etch"}}
-      <button class="modal-close"></button>
-      {{/link-to}}
+        {{#link-to "etch"}}
+        <button class="modal-close"></button>
+        {{/link-to}}
+      {{/simple-form}}
 
     </section>
   </div>
