--- a/app/styles/_memories.scss
+++ b/app/styles/_memories.scss
@@ -11,13 +11,25 @@
   padding: 2rem 0;
   width: 0.5rem;
   background: $gray;
-  height: 40rem;
+  min-height: 40rem;
   margin: auto;
+
+  .record {
+    width: 100%;
+    max-width: 100%;
+  }
 
   &__item {
     position: relative;
     transform: translateX(-50%);
     width: 18rem;
+
+    &:nth-of-type(odd) {
+      .etch-memories__item-content {
+        left: auto;
+        right: 100%;
+      }
+    }
   }
 
   > * + * {
@@ -31,11 +43,14 @@
   }
 
   &__item-content {
-    // position: absolute;
+    position: absolute;
+    justify-content: flex-end;
+    display: block;
+    width: 100%;
 
     top: 0;
     left: 100%;
-    margin-left: 1rem;
+    margin: 0 1rem;
   }
 
   // p:nth-of-type(even) {
