edit user profile form

--- a/app/admin/profile/template.hbs
+++ b/app/admin/profile/template.hbs
@@ -10,6 +10,17 @@
     {{!-- <h2>Nashville, TN.</h2>
     <h2>http://kittybotblog.io</h2> --}}
     <button type="button" class="form__btn"{{action "choosePic" currentUser.user}}>Upload Profile Pic</button>
+
+
+    {{#simple-form startingValues=model onsubmit=(action "update") as |formValues|}}
+      {{input value=formValues.username placeholder="Username"}}
+      {{input value=formValues.email placeholder="Email"}}
+      {{input value=formValues.location placeholder="Location"}}
+
+
+
+      <button>Submit</button>
+    {{/simple-form}}
   </div>
 
 </div>
