--- a/app/etch/song/template.hbs
+++ b/app/etch/song/template.hbs
@@ -41,8 +41,8 @@
         <footer class="modal-card-foot">
           <p class="control">
 
-            <button class="button is-warning">Submit</button>
-            <button class="button is-warning">Cancel</button>
+            <button class="button is-warning" disabled={{disabled}}>Submit</button>
+            <button type="button" class="button is-warning">Cancel</button>
           </p>
         </footer>
 
