--- a/app/etch/template.hbs
+++ b/app/etch/template.hbs
@@ -3,7 +3,7 @@
 
   <div class="hero">
     {{#link-to "etch.song"}}
-    <img class="record-song" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+    <img class="record-song" src="/images/record.png"/>
     {{/link-to}}
   </div>
 
