--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -8,7 +8,7 @@
     </div>
 
     <h1 class="nav-item is-brand">
-      Etch
+      <img src="/images/etch-logo.png" alt="etch">
     </h1>
   </div>
 
@@ -41,10 +41,16 @@
 
 {{#side-menu width="20%"}}
   <ul class="side-menu-nav">
-    <p class="side--menu-title">Etch</p>
+
+    <p class="side--menu-title">
+      {{#link-to "index"}}
+      etch
+      {{/link-to}}
+    </p>
+
     <li>
       {{#side-menu-link-to "etch"}}
-        Etch A Memory!
+        etch A Memory!
       {{/side-menu-link-to}}
     </li>
     {{#if currentUser.user}}
