--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -3,7 +3,10 @@
     color: $warning;
     font-size: 30px;
     font-weight: bold;
+  }
 
+  .nav-item img {
+    max-height: 50px;
   }
 }
 
@@ -63,9 +66,12 @@
 }
 
 .side--menu-title {
-  color: $secondary;
   font-weight: bolder;
   font-size: 2rem;
   padding: 1rem;
   text-align: center;
+
+  a {
+    color: $secondary;
+  }
 }
