--- a/app/etch/song/template.hbs
+++ b/app/etch/song/template.hbs
@@ -42,7 +42,9 @@
           <p class="control">
 
             <button class="button is-warning" disabled={{disabled}}>Submit</button>
+            {{#link-to "etch"}}
             <button type="button" class="button is-warning">Cancel</button>
+            {{/link-to}}
           </p>
         </footer>
 
