initial setup main page index

--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,10 +1,10 @@
 {{outlet}}
 
-<div class="hero">
-  <img class="record" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+<div class="about">
+  <h1>What is etch?</h1>
 </div>
 
-<div class="memories">
+{{!-- <div class="memories">
 
   <div class="memory">
     <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
@@ -22,4 +22,4 @@
     <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
   </div>
 
-</div>
+</div> --}}
