random stuff plus test

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -8,7 +8,7 @@
     </div>
 
     <h1 class="nav-item is-brand">
-      <img src="/images/etch-logo.png" alt="etch">
+      <img src="/images/etch50px.png" alt="etch">
     </h1>
   </div>
 
@@ -45,7 +45,7 @@
   <ul class="side-menu-nav">
 
     <p class="side--menu-title">
-      {{#link-to "index"}}
+      {{#link-to "admin"}}
       etch
       {{/link-to}}
     </p>
