--- a/app/map/template.hbs
+++ b/app/map/template.hbs
@@ -11,7 +11,7 @@
 
       {{#marker-layer
         location=(arr memory.lat memory.lng)
-        icon=(icon iconUrl="/images/record.png" iconSize=(point 40 40))}}
+        icon=(icon iconUrl="/images/record50px.png" iconSize=(point 40 40))}}
         {{#popup-layer}}
           <h2>{{emoji-character memory.emoji }} {{ memory.user.username }} </h2>
         {{/popup-layer}}
