--- a/app/styles/_index.scss
+++ b/app/styles/_index.scss
@@ -1,4 +1,13 @@
-.about {
-  display: flex;
+.content {
+  text-align: center;
+  margin: 0 auto;
 
 }
+
+.button {
+
+}
+
+// display: block;
+// margin-left: auto;
+// margin-right: auto
