--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -48,3 +48,6 @@ $body-background: $white;
 @import "map";
 @import "memories";
 @import "friends";
+@import "index";
+@import "modal";
+@import "popular";
