--- a/app/admin/index/template.hbs
+++ b/app/admin/index/template.hbs
@@ -1,25 +1,18 @@
 {{outlet}}
 
-<div class="hero">
-  <img class="record" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+<div class="content">
+  <h1>What is etch?</h1>
+  <h2>A fun, simple app to track how music makes you feel! {{emoji-character "grinning"}}</h2>
+  {{#link-to "etch" class="button is-success is-large"}}
+    Let's get started!
+  {{/link-to}}
 </div>
 
+
 <div class="memories">
-
-  <div class="memory">
-    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
-  </div>
-
-  <div class="memory">
-    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
-  </div>
-
-  <div class="memory">
-    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
-  </div>
-
-  <div class="memory">
-    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
-  </div>
-
+  {{#each model as |memory|}}
+    <div class="memory">
+      <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+    </div>
+  {{/each}}
 </div>
