--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,25 +1,16 @@
 {{outlet}}
 
-<div class="about">
+<div class="content">
   <h1>What is etch?</h1>
+  <h2>A fun, simple app to track how music makes you feel! {{emoji-character "grinning"}}</h2>
+  <a class="button is-success is-large">Try etch now!</a>
 </div>
 
-{{!-- <div class="memories">
 
-  <div class="memory">
-    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
-  </div>
-
-  <div class="memory">
-    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
-  </div>
-
-  <div class="memory">
-    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
-  </div>
-
-  <div class="memory">
-    <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
-  </div>
-
-</div> --}}
+<div class="memories">
+  {{#each model as |memory|}}
+    <div class="memory">
+      <img class="memory__img" src="http://www.comparevinyl.com/assets/blank_record-88f526f5bf343a5eba24e53c62acfe85.png"/>
+    </div>
+  {{/each}}
+</div>
